mainly limiting meme upload file size: - installed new package browser-image-compression to frontend - implemented file size limit for uploaded files in meme editor - enforced entered meme title - fixed WYSIWYG visibility option click bug - fixed bug for getting stats on new template

--- a/finalproject/frontend/src/style/CanvasUploadButton.scss
+++ b/finalproject/frontend/src/style/CanvasUploadButton.scss
@@ -1,5 +1,12 @@
 @import "_globalMixins.scss";
 
-.canvas-publish-btn {
-    @include largeButton(#6079d7, #2f4dbb);
+.canvas-publish-wrapper {
+    .filesize-input {
+        margin: 0 10px;
+        vertical-align: bottom;
+    }
+
+    .canvas-publish-btn {
+        @include largeButton(#6079d7, #2f4dbb);
+    }
 }
